# musictagger_rs

./: Cargo.toml  Makefile  NOTES.md  README.md
.github/workflows/: ci.yml  release.yml
hooks/: README.md  pre-commit
scripts/: README.md  release.sh
src/: main.rs  manual_mode.rs  matcher.rs  musicbrainz.rs  tagger.rs  updater.rs
