[package]
name = "musictagger_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
id3 = "1.13"
walkdir = "2.4"
fuzzy-matcher = "0.3"
anyhow = "1.0"
colored = "2.1"
indicatif = "0.17"
dialoguer = "0.11"
image = "0.24"
mp3-duration = "0.1"

[profile.release]
strip = true
lto = true
codegen-units = 1